--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "next": "^12.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.1"
   }
 }
